# potato-weight-nutrition

./: Makefile  README.md  pyproject.toml
data_contracts/expectations/: bronze_nutrition_data.yml  silver_features.yml
data_contracts/schemas/: nutrition_schema.py
docker/: docker-compose.yml  otel-collector-config.yaml  prometheus.yml
docker/grafana/provisioning/dashboards/: dashboards.yml  potato-pipeline-dashboard.json
docs/: EXTRACTED.md
infra/terraform/: README.md  backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
notebooks/: 00_explore.ipynb
openlineage/: lineage-demo.md  marquez-config.yml  marquez-docker-compose.yml
ops/: runbook.md  security-notes.md  system-diagram.md
potato-weight-nutrition/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
potato-weight-nutrition/notebooks/: 00_explore.ipynb
potato-weight-nutrition/reports/analysis/: ols_results.txt
potato-weight-nutrition/tests/: test_keywords.py  test_week_align.py
processed/: Potato_tidy.csv
reports/analysis/: analysis_df.csv  food_keywords.csv
scripts/: analyze_potato_data.py  complete_conversion.py  convert_potato_data.py  corrected_analysis.py  create_data_status_teaser.py  create_real_teaser.py  create_realistic_teaser.py  fixed_potato_analysis.py  potato_analysis.py  potato_fiber_analysis.py
src/_archive_pwn/: reporting.py  schemas_simple.py
src/potato_pipeline/: __init__.py  cli.py  config.py  features.py  io.py  modeling.py  plotting.py  synthetic.py
src/potato_pipeline/observability/: observability.py  utils.py
src/potato_weight_nutrition.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pwn/: __init__.py  cli.py  config.py  contracts.py  features.py  lineage.py  models.py  observability.py  reporting.py  schemas.py  schemas_simple.py  synthetic.py  utils.py
test_output/: Potato_fiber_daily.csv  Potato_nutrition_rows.csv  Potato_tidy.csv
test_repro/: index.md  metrics.json
test_repro/analysis/: fe_results.json  fe_summary.txt  nutrition_weekly.csv  ols_results.json  ols_summary.txt  weight_trajectories.csv
test_repro/data/: Potato_fiber_daily.csv  Potato_nutrition_rows.csv
